Convert treatment comparison to blog post, update blog section

--- a/index.html
+++ b/index.html
@@ -1920,81 +1920,6 @@
         </div>
     </section>
 
-    <!-- COMPARE SECTION -->
-    <section class="compare-section">
-        <div class="section-inner">
-            <div class="compare-box">
-                <h2 class="compare-title">Kilo yönetiminde seçeneklerinizi biliyor musunuz?</h2>
-                <div class="compare-tags">
-                    <span class="compare-tag">Diyet</span>
-                    <span class="compare-tag">Egzersiz</span>
-                    <span class="compare-tag">İlaçlar</span>
-                    <span class="compare-tag">Endoskopik</span>
-                    <span class="compare-tag">Cerrahi</span>
-                </div>
-                <p class="compare-desc">
-                    Her yöntemin artıları, eksileri, maliyeti ve kalıcılığı farklıdır. 
-                    Hangisi size uygun?
-                </p>
-                <div class="compare-preview">
-                    <div class="compare-preview-item" onclick="this.classList.toggle('expanded')">
-                        <span class="compare-preview-icon">💊</span>
-                        <div class="compare-preview-text">
-                            <div class="compare-preview-title">GLP-1 İlaçları (Ozempic, Wegovy)</div>
-                            <div class="compare-preview-meta">%15-20 kilo kaybı • Haftalık enjeksiyon</div>
-                            <div class="compare-preview-details">
-                                <p>Semaglutid ve tirzepatid gibi GLP-1 agonistleri, iştahı azaltarak ve mide boşalmasını yavaşlatarak kilo kaybı sağlar. Haftalık enjeksiyon şeklinde uygulanır. Diyabet kontrolünü de iyileştirir.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="compare-preview-item" onclick="this.classList.toggle('expanded')">
-                        <span class="compare-preview-icon">🔬</span>
-                        <div class="compare-preview-text">
-                            <div class="compare-preview-title">Endoskopik Tüp Mide (ESG)</div>
-                            <div class="compare-preview-meta">%15-20 kilo kaybı • Tek seferlik prosedür</div>
-                            <div class="compare-preview-details">
-                                <p>Mide hacmi endoskopik olarak dikişlerle küçültülür. Kesi yok, genel anestezi altında 60-90 dakika sürer. Aynı gün taburcu olunur, geri dönüşümlü bir prosedürdür.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="compare-preview-item" onclick="this.classList.toggle('expanded')">
-                        <span class="compare-preview-icon">🏥</span>
-                        <div class="compare-preview-text">
-                            <div class="compare-preview-title">Bariatrik Cerrahi (Sleeve, Bypass)</div>
-                            <div class="compare-preview-meta">%25-35 kilo kaybı • Kalıcı anatomik değişiklik</div>
-                            <div class="compare-preview-details">
-                                <p>Tüp mide (sleeve) veya mide bypass ameliyatları kalıcı kilo kaybı sağlar. BMI >35 için önerilir. En yüksek kilo kaybı oranına sahip yöntemdir, diyabet remisyonu %80+ oranındadır.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="compare-preview-item" onclick="this.classList.toggle('expanded')">
-                        <span class="compare-preview-icon">🥗</span>
-                        <div class="compare-preview-text">
-                            <div class="compare-preview-title">Diyet ve Yaşam Tarzı</div>
-                            <div class="compare-preview-meta">%5-10 kilo kaybı • Sürdürülebilir alışkanlıklar</div>
-                            <div class="compare-preview-details">
-                                <p>Kalori açığı, dengeli beslenme ve düzenli egzersiz ile sağlıklı kilo kaybı sağlanır. Tüm tedavi yöntemlerinin temelini oluşturur ve uzun vadeli başarı için gereklidir.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="compare-preview-item" onclick="this.classList.toggle('expanded')">
-                        <span class="compare-preview-icon">🏃</span>
-                        <div class="compare-preview-text">
-                            <div class="compare-preview-title">Egzersiz Programları</div>
-                            <div class="compare-preview-meta">%3-5 kilo kaybı • Kas ve metabolizma desteği</div>
-                            <div class="compare-preview-details">
-                                <p>Düzenli fiziksel aktivite kas kütlesini korur, metabolizmayı hızlandırır ve genel sağlığı iyileştirir. Diğer tedavi yöntemleriyle birlikte uygulandığında sonuçları önemli ölçüde artırır.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <a href="pages/tedavi.html" class="btn btn-primary btn-lg">
-                    Tedavi Seçeneklerini Karşılaştır →
-                </a>
-            </div>
-        </div>
-    </section>
-
     <!-- HEALTH WHEEL SECTION -->
     <section style="padding: 5rem 2rem; background: linear-gradient(180deg, #f8fafc 0%, white 100%);">
         <style>
@@ -2122,6 +2047,17 @@
                 <p style="color: #6b7280;">Sağlık, beslenme ve yaşam tarzı hakkında güncel yazılar</p>
             </div>
             <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem;">
+                <a href="pages/blog/kilo-yonetimi-tedavi-secenekleri-karsilastirmasi.html" style="text-decoration: none; color: inherit;">
+                    <div style="background: #f8fafc; border-radius: 16px; overflow: hidden; border: 1px solid #e5e7eb; transition: all 0.3s;">
+                        <div style="height: 180px; background: linear-gradient(135deg, #E8963E, #D97706); display: flex; align-items: flex-end; padding: 1.25rem; position: relative;">
+                            <h3 style="color: white; font-size: 1.1rem; font-weight: 600; text-shadow: 0 2px 4px rgba(0,0,0,0.2);">Kilo Yönetimi: Tedavi Seçenekleri</h3>
+                        </div>
+                        <div style="padding: 1.25rem;">
+                            <p style="color: #6b7280; font-size: 0.9rem; margin-bottom: 0.5rem;">İlaç, endoskopi, cerrahi, diyet - hangisi size uygun?</p>
+                            <span style="color: #9ca3af; font-size: 0.8rem;">📅 7 Şubat 2026</span>
+                        </div>
+                    </div>
+                </a>
                 <a href="pages/blog/bilimsel-yaklasimimiz-neden-onemli.html" style="text-decoration: none; color: inherit;">
                     <div style="background: #f8fafc; border-radius: 16px; overflow: hidden; border: 1px solid #e5e7eb; transition: all 0.3s;">
                         <div style="height: 180px; background: linear-gradient(135deg, #195157, #2a7d83); display: flex; align-items: flex-end; padding: 1.25rem; position: relative;">
@@ -2140,17 +2076,6 @@
                         </div>
                         <div style="padding: 1.25rem;">
                             <p style="color: #6b7280; font-size: 0.9rem; margin-bottom: 0.5rem;">Ozempic, Wegovy nasıl çalışır? Bilmeniz gerekenler.</p>
-                            <span style="color: #9ca3af; font-size: 0.8rem;">📅 7 Şubat 2026</span>
-                        </div>
-                    </div>
-                </a>
-                <a href="pages/blog/blue-zones-dunyanin-en-uzun-yasayan-insanlarinin-9-sirri.html" style="text-decoration: none; color: inherit;">
-                    <div style="background: #f8fafc; border-radius: 16px; overflow: hidden; border: 1px solid #e5e7eb; transition: all 0.3s;">
-                        <div style="height: 180px; background: linear-gradient(135deg, #06B6D4, #0891B2); display: flex; align-items: flex-end; padding: 1.25rem; position: relative;">
-                            <h3 style="color: white; font-size: 1.1rem; font-weight: 600; text-shadow: 0 2px 4px rgba(0,0,0,0.2);">Blue Zones: Uzun Yaşamın 9 Sırrı</h3>
-                        </div>
-                        <div style="padding: 1.25rem;">
-                            <p style="color: #6b7280; font-size: 0.9rem; margin-bottom: 0.5rem;">Dünyanın en uzun yaşayan insanlarının ortak özellikleri.</p>
                             <span style="color: #9ca3af; font-size: 0.8rem;">📅 7 Şubat 2026</span>
                         </div>
                     </div>
