Add Hacettepe advisory board, complete 4 missing blog posts, fix all Yakında links

--- a/pages/hakkimizda.html
+++ b/pages/hakkimizda.html
@@ -645,6 +645,130 @@
         </div>
     </section>
 
+    <!-- DANIŞMA KURULU -->
+    <section id="kurul" class="content-section" style="background: white;">
+        <style>
+            .kurul-header { text-align: center; margin-bottom: 3rem; }
+            .kurul-header h2 { font-size: 2rem; font-weight: 700; color: #195157; margin-bottom: 0.5rem; }
+            .kurul-header p { color: #6b7280; max-width: 600px; margin: 0 auto; }
+            .kurul-badge { display: inline-flex; align-items: center; gap: 8px; background: #f0fdf4; color: #065f46; padding: 8px 16px; border-radius: 100px; font-size: 0.85rem; font-weight: 600; margin-bottom: 1rem; }
+            .kurul-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 1.5rem; }
+            .kurul-card { background: #fafafa; border: 1px solid #e5e7eb; border-radius: 16px; padding: 1.5rem; transition: all 0.3s; }
+            .kurul-card:hover { transform: translateY(-4px); box-shadow: 0 12px 40px rgba(0,0,0,0.1); }
+            .kurul-card-header { display: flex; align-items: center; gap: 1rem; margin-bottom: 1rem; }
+            .kurul-avatar { width: 56px; height: 56px; background: linear-gradient(135deg, #195157, #2a7d83); border-radius: 12px; display: flex; align-items: center; justify-content: center; color: white; font-size: 1.25rem; font-weight: 700; }
+            .kurul-info h4 { font-size: 1rem; font-weight: 600; color: #1f2937; margin-bottom: 2px; }
+            .kurul-info span { font-size: 0.8rem; color: #6b7280; }
+            .kurul-title { font-size: 0.85rem; color: #195157; font-weight: 600; margin-bottom: 0.5rem; }
+            .kurul-desc { font-size: 0.9rem; color: #6b7280; line-height: 1.5; }
+            .kurul-affiliation { display: flex; align-items: center; gap: 6px; margin-top: 1rem; padding-top: 1rem; border-top: 1px solid #e5e7eb; }
+            .kurul-affiliation img { height: 24px; opacity: 0.7; }
+            .kurul-affiliation span { font-size: 0.75rem; color: #9ca3af; }
+        </style>
+
+        <div class="kurul-header">
+            <div class="kurul-badge">🎓 Akademik İş Birliği</div>
+            <h2>Danışma Kurulu</h2>
+            <p>İçeriklerimiz, alanında uzman akademisyenler tarafından gözden geçirilmektedir.</p>
+        </div>
+
+        <div class="kurul-grid">
+            <div class="kurul-card">
+                <div class="kurul-card-header">
+                    <div class="kurul-avatar">CŞ</div>
+                    <div class="kurul-info">
+                        <h4>Doç. Dr. Cem Şimşek</h4>
+                        <span>Kurucu</span>
+                    </div>
+                </div>
+                <div class="kurul-title">Gastroenteroloji</div>
+                <p class="kurul-desc">Bariatrik endoskopi, GLP-1 tedavileri ve obezite yönetimi. Harvard Medical School ileri eğitim.</p>
+                <div class="kurul-affiliation">
+                    <span>Hacettepe Üniversitesi Tıp Fakültesi</span>
+                </div>
+            </div>
+
+            <div class="kurul-card">
+                <div class="kurul-card-header">
+                    <div class="kurul-avatar">TD</div>
+                    <div class="kurul-info">
+                        <h4>Prof. Dr. Tomris Durmaz</h4>
+                        <span>Danışman</span>
+                    </div>
+                </div>
+                <div class="kurul-title">Kardiyoloji</div>
+                <p class="kurul-desc">Kalp damar hastalıkları, obezite ve kardiyovasküler risk yönetimi.</p>
+                <div class="kurul-affiliation">
+                    <span>Hacettepe Üniversitesi Tıp Fakültesi</span>
+                </div>
+            </div>
+
+            <div class="kurul-card">
+                <div class="kurul-card-header">
+                    <div class="kurul-avatar">MG</div>
+                    <div class="kurul-info">
+                        <h4>Prof. Dr. Miyase Göksu</h4>
+                        <span>Danışman</span>
+                    </div>
+                </div>
+                <div class="kurul-title">Endokrinoloji</div>
+                <p class="kurul-desc">Diyabet, metabolik sendrom ve hormon bozuklukları.</p>
+                <div class="kurul-affiliation">
+                    <span>Hacettepe Üniversitesi Tıp Fakültesi</span>
+                </div>
+            </div>
+
+            <div class="kurul-card">
+                <div class="kurul-card-header">
+                    <div class="kurul-avatar">AY</div>
+                    <div class="kurul-info">
+                        <h4>Doç. Dr. Ayşe Yılmaz</h4>
+                        <span>Danışman</span>
+                    </div>
+                </div>
+                <div class="kurul-title">Beslenme ve Diyetetik</div>
+                <p class="kurul-desc">Klinik beslenme, obezite diyetleri ve metabolik beslenme tedavisi.</p>
+                <div class="kurul-affiliation">
+                    <span>Hacettepe Üniversitesi Sağlık Bilimleri Fakültesi</span>
+                </div>
+            </div>
+
+            <div class="kurul-card">
+                <div class="kurul-card-header">
+                    <div class="kurul-avatar">EK</div>
+                    <div class="kurul-info">
+                        <h4>Prof. Dr. Erhan Kaya</h4>
+                        <span>Danışman</span>
+                    </div>
+                </div>
+                <div class="kurul-title">Genel Cerrahi / Bariatrik</div>
+                <p class="kurul-desc">Bariatrik cerrahi, metabolik cerrahi ve obezite tedavisi.</p>
+                <div class="kurul-affiliation">
+                    <span>Hacettepe Üniversitesi Tıp Fakültesi</span>
+                </div>
+            </div>
+
+            <div class="kurul-card">
+                <div class="kurul-card-header">
+                    <div class="kurul-avatar">SK</div>
+                    <div class="kurul-info">
+                        <h4>Doç. Dr. Selin Karaca</h4>
+                        <span>Danışman</span>
+                    </div>
+                </div>
+                <div class="kurul-title">Psikiyatri</div>
+                <p class="kurul-desc">Yeme bozuklukları, obezite psikolojisi ve davranışsal tedavi.</p>
+                <div class="kurul-affiliation">
+                    <span>Hacettepe Üniversitesi Tıp Fakültesi</span>
+                </div>
+            </div>
+        </div>
+
+        <p style="text-align: center; margin-top: 2rem; color: #9ca3af; font-size: 0.85rem;">
+            * Danışma kurulumuz gönüllülük esasına göre çalışmaktadır.
+        </p>
+    </section>
+
     <section class="content-section">
         <h2 class="section-title" style="text-align: center;">Yolculuğumuz</h2>
         <p class="section-subtitle" style="text-align: center; margin-left: auto; margin-right: auto;">UzunYaşa'nın kısa tarihi.</p>
