Fix broken links: footer, nav, topic cards, buttons - comprehensive link audit

--- a/pages/rehberler.html
+++ b/pages/rehberler.html
@@ -519,7 +519,7 @@
                 <a href="hikayeler.html" class="nav-link">Hikayeler</a>
                 <a href="bilim.html" class="nav-link">Bilim</a>
                 <a href="hakkimizda.html" class="nav-link">Hakkımızda</a>
-                <a href="#" class="btn-primary">Teste Başla</a>
+                <a href="test.html" class="btn-primary">Teste Başla</a>
             </nav>
         </div>
     </header>
@@ -556,7 +556,7 @@
                         12.4K okuyan
                     </span>
                 </div>
-                <a href="#" class="btn-guide">Rehberi Oku →</a>
+                <a href="rehberler/kalori-acigi.html" class="btn-guide">Rehberi Oku →</a>
             </div>
             <div class="featured-image">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
@@ -763,7 +763,7 @@
     <section class="cta-section">
         <h2>Size özel rehber önerisi alın</h2>
         <p>Kısa testimizi tamamlayın, hedeflerinize en uygun rehberleri keşfedin.</p>
-        <a href="#" class="btn-white">Teste Başla →</a>
+        <a href="test.html" class="btn-white">Teste Başla →</a>
     </section>
 
     <footer class="footer">
@@ -792,7 +792,7 @@
                     <h4>Hakkımızda</h4>
                     <a href="hakkimizda.html">Ekibimiz</a>
                     <a href="bilim.html">Bilimsel Yaklaşım</a>
-                    <a href="#">İletişim</a>
+                    <a href="hakkimizda.html#iletisim">İletişim</a>
                 </div>
             </div>
             <div class="footer-bottom">
