--- a/pages/tedavi.html
+++ b/pages/tedavi.html
@@ -422,11 +422,11 @@
             </a>
             <nav class="nav">
                 <a href="#" class="nav-link active">Keşfet ▾</a>
-                <a href="#" class="nav-link">Araçlar</a>
-                <a href="#" class="nav-link">Hikayeler</a>
-                <a href="#" class="nav-link">Bilim</a>
-                <a href="#" class="nav-link">Hakkımızda</a>
-                <a href="#" class="btn-primary">Teste Başla</a>
+                <a href="araclar.html" class="nav-link">Araçlar</a>
+                <a href="hikayeler.html" class="nav-link">Hikayeler</a>
+                <a href="bilim.html" class="nav-link">Bilim</a>
+                <a href="hakkimizda.html" class="nav-link">Hakkımızda</a>
+                <a href="test.html" class="btn-primary">Teste Başla</a>
             </nav>
         </div>
     </header>
@@ -470,11 +470,11 @@
                 </div>
                 <div class="treatment-body">
                     <ul class="treatment-list">
-                        <li><a href="#">Beslenme Programları <span>→</span></a></li>
-                        <li><a href="#">Egzersiz Reçeteleri <span>→</span></a></li>
+                        <li><a href="beslenme.html">Beslenme Programları <span>→</span></a></li>
+                        <li><a href="egzersiz.html">Egzersiz Reçeteleri <span>→</span></a></li>
                         <li><a href="#">Davranışsal Terapi <span>→</span></a></li>
-                        <li><a href="#">Uyku Optimizasyonu <span>→</span></a></li>
-                        <li><a href="#">Stres Yönetimi <span>→</span></a></li>
+                        <li><a href="uyku-stres.html">Uyku Optimizasyonu <span>→</span></a></li>
+                        <li><a href="uyku-stres.html">Stres Yönetimi <span>→</span></a></li>
                     </ul>
                 </div>
             </div>
@@ -486,7 +486,7 @@
                 </div>
                 <div class="treatment-body">
                     <ul class="treatment-list">
-                        <li><a href="#">GLP-1 Agonistleri <span>→</span></a></li>
+                        <li><a href="blog/glp1-ilaclari-ve-kilo-verme-bilmeniz-gerekenler.html">GLP-1 Agonistleri <span>→</span></a></li>
                         <li><a href="#">Orlistat <span>→</span></a></li>
                         <li><a href="#">Naltrexone/Bupropion <span>→</span></a></li>
                         <li><a href="#">Kombinasyon Tedavileri <span>→</span></a></li>
@@ -595,7 +595,7 @@
     <section class="cta-section">
         <h2>Size uygun tedavi seçeneğini keşfedin</h2>
         <p>Kısa değerlendirmemizi tamamlayın, kişiselleştirilmiş öneriler alın.</p>
-        <a href="#" class="btn-white">Değerlendirmeye Başla →</a>
+        <a href="test.html" class="btn-white">Değerlendirmeye Başla →</a>
     </section>
 
     <footer class="footer">
@@ -616,15 +616,15 @@
                 </div>
                 <div class="footer-col">
                     <h4>Araçlar</h4>
-                    <a href="#">Bana Ne Uygun?</a>
-                    <a href="#">BMI Hesaplayıcı</a>
-                    <a href="#">Kalori Hesaplayıcı</a>
+                    <a href="test.html">Bana Ne Uygun?</a>
+                    <a href="araclar.html#bmi">BMI Hesaplayıcı</a>
+                    <a href="araclar.html#kalori">Kalori Hesaplayıcı</a>
                 </div>
                 <div class="footer-col">
                     <h4>Hakkımızda</h4>
-                    <a href="#">Ekibimiz</a>
-                    <a href="#">Bilimsel Yaklaşım</a>
-                    <a href="#">İletişim</a>
+                    <a href="hakkimizda.html">Ekibimiz</a>
+                    <a href="bilim.html">Bilimsel Yaklaşım</a>
+                    <a href="hakkimizda.html#iletisim">İletişim</a>
                 </div>
             </div>
             <div class="footer-bottom">
