--- a/pages/uyku-stres.html
+++ b/pages/uyku-stres.html
@@ -390,11 +390,11 @@
             </a>
             <nav class="nav">
                 <a href="#" class="nav-link active">Keşfet ▾</a>
-                <a href="#" class="nav-link">Araçlar</a>
-                <a href="#" class="nav-link">Hikayeler</a>
-                <a href="#" class="nav-link">Bilim</a>
-                <a href="#" class="nav-link">Hakkımızda</a>
-                <a href="#" class="btn-primary">Teste Başla</a>
+                <a href="araclar.html" class="nav-link">Araçlar</a>
+                <a href="hikayeler.html" class="nav-link">Hikayeler</a>
+                <a href="bilim.html" class="nav-link">Bilim</a>
+                <a href="hakkimizda.html" class="nav-link">Hakkımızda</a>
+                <a href="test.html" class="btn-primary">Teste Başla</a>
             </nav>
         </div>
     </header>
@@ -564,15 +564,15 @@
                 </div>
                 <div class="footer-col">
                     <h4>Araçlar</h4>
-                    <a href="#">Bana Ne Uygun?</a>
-                    <a href="#">BMI Hesaplayıcı</a>
-                    <a href="#">Kalori Hesaplayıcı</a>
+                    <a href="test.html">Bana Ne Uygun?</a>
+                    <a href="araclar.html#bmi">BMI Hesaplayıcı</a>
+                    <a href="araclar.html#kalori">Kalori Hesaplayıcı</a>
                 </div>
                 <div class="footer-col">
                     <h4>Hakkımızda</h4>
-                    <a href="#">Ekibimiz</a>
-                    <a href="#">Bilimsel Yaklaşım</a>
-                    <a href="#">İletişim</a>
+                    <a href="hakkimizda.html">Ekibimiz</a>
+                    <a href="bilim.html">Bilimsel Yaklaşım</a>
+                    <a href="hakkimizda.html#iletisim">İletişim</a>
                 </div>
             </div>
             <div class="footer-bottom">
