--- a/pages/araclar.html
+++ b/pages/araclar.html
@@ -578,7 +578,7 @@
                 <a href="hikayeler.html" class="nav-link">Hikayeler</a>
                 <a href="bilim.html" class="nav-link">Bilim</a>
                 <a href="hakkimizda.html" class="nav-link">Hakkımızda</a>
-                <a href="#" class="btn-primary">Teste Başla</a>
+                <a href="test.html" class="btn-primary">Teste Başla</a>
             </nav>
         </div>
     </header>
@@ -870,7 +870,7 @@
                     <h4>Hakkımızda</h4>
                     <a href="hakkimizda.html">Ekibimiz</a>
                     <a href="bilim.html">Bilimsel Yaklaşım</a>
-                    <a href="#">İletişim</a>
+                    <a href="hakkimizda.html#iletisim">İletişim</a>
                 </div>
             </div>
             <div class="footer-bottom">
