--- a/pages/beslenme.html
+++ b/pages/beslenme.html
@@ -504,11 +504,11 @@
             </a>
             <nav class="nav">
                 <a href="#" class="nav-link active">Keşfet ▾</a>
-                <a href="#" class="nav-link">Araçlar</a>
-                <a href="#" class="nav-link">Hikayeler</a>
-                <a href="#" class="nav-link">Bilim</a>
-                <a href="#" class="nav-link">Hakkımızda</a>
-                <a href="#" class="btn-primary">Teste Başla</a>
+                <a href="araclar.html" class="nav-link">Araçlar</a>
+                <a href="hikayeler.html" class="nav-link">Hikayeler</a>
+                <a href="bilim.html" class="nav-link">Bilim</a>
+                <a href="hakkimizda.html" class="nav-link">Hakkımızda</a>
+                <a href="test.html" class="btn-primary">Teste Başla</a>
             </nav>
         </div>
     </header>
@@ -537,7 +537,7 @@
         <p class="section-subtitle">Sağlıklı beslenmenin her yönünü keşfedin. Her konu, güncel bilimsel araştırmalarla desteklenmektedir.</p>
         
         <div class="topics-grid">
-            <a href="#" class="topic-card">
+            <a href="rehberler/kalori-acigi.html" class="topic-card">
                 <div class="topic-icon">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M12 2L2 7l10 5 10-5-10-5z"/>
@@ -550,7 +550,7 @@
                 <span class="arrow">Devamını Oku →</span>
             </a>
 
-            <a href="#" class="topic-card">
+            <a href="rehberler/aralikli-oruc.html" class="topic-card">
                 <div class="topic-icon">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <circle cx="12" cy="12" r="10"/>
@@ -562,7 +562,7 @@
                 <span class="arrow">Devamını Oku →</span>
             </a>
 
-            <a href="#" class="topic-card">
+            <a href="blog/akdeniz-diyeti-kalp-sagligi.html" class="topic-card">
                 <div class="topic-icon">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"/>
@@ -573,7 +573,7 @@
                 <span class="arrow">Devamını Oku →</span>
             </a>
 
-            <a href="#" class="topic-card">
+            <a href="rehberler/akdeniz-diyeti.html" class="topic-card">
                 <div class="topic-icon">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M18 8h1a4 4 0 0 1 0 8h-1"/>
@@ -588,7 +588,7 @@
                 <span class="arrow">Devamını Oku →</span>
             </a>
 
-            <a href="#" class="topic-card">
+            <a href="blog/insulin-direnci-belirtiler-tedavi.html" class="topic-card">
                 <div class="topic-icon">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/>
@@ -599,7 +599,7 @@
                 <span class="arrow">Devamını Oku →</span>
             </a>
 
-            <a href="#" class="topic-card">
+            <a href="rehberler.html" class="topic-card">
                 <div class="topic-icon">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"/>
@@ -736,7 +736,7 @@
     <section class="cta-section">
         <h2>Size uygun beslenme planını keşfedin</h2>
         <p>Ücretsiz testimizi tamamlayın, kişiselleştirilmiş beslenme önerilerinizi alın.</p>
-        <a href="#" class="btn-white">Teste Başla →</a>
+        <a href="test.html" class="btn-white">Teste Başla →</a>
     </section>
 
     <!-- FOOTER -->
@@ -764,9 +764,9 @@
                 </div>
                 <div class="footer-col">
                     <h4>Hakkımızda</h4>
-                    <a href="#">Ekibimiz</a>
-                    <a href="#">Bilimsel Yaklaşım</a>
-                    <a href="#">İletişim</a>
+                    <a href="hakkimizda.html">Ekibimiz</a>
+                    <a href="bilim.html">Bilimsel Yaklaşım</a>
+                    <a href="hakkimizda.html#iletisim">İletişim</a>
                 </div>
             </div>
             <div class="footer-bottom">
