--- a/pages/egzersiz.html
+++ b/pages/egzersiz.html
@@ -451,11 +451,11 @@
             </a>
             <nav class="nav">
                 <a href="#" class="nav-link active">Keşfet ▾</a>
-                <a href="#" class="nav-link">Araçlar</a>
-                <a href="#" class="nav-link">Hikayeler</a>
-                <a href="#" class="nav-link">Bilim</a>
-                <a href="#" class="nav-link">Hakkımızda</a>
-                <a href="#" class="btn-primary">Teste Başla</a>
+                <a href="araclar.html" class="nav-link">Araçlar</a>
+                <a href="hikayeler.html" class="nav-link">Hikayeler</a>
+                <a href="bilim.html" class="nav-link">Bilim</a>
+                <a href="hakkimizda.html" class="nav-link">Hakkımızda</a>
+                <a href="test.html" class="btn-primary">Teste Başla</a>
             </nav>
         </div>
     </header>
@@ -612,7 +612,7 @@
                                 Video rehberlik
                             </li>
                         </ul>
-                        <a href="#" class="btn-outline">Programa Başla</a>
+                        <a href="rehberler/evde-egzersiz.html" class="btn-outline">Programa Başla</a>
                     </div>
                 </div>
 
@@ -641,7 +641,7 @@
                                 İlerleme takibi
                             </li>
                         </ul>
-                        <a href="#" class="btn-outline">Programa Başla</a>
+                        <a href="rehberler/evde-egzersiz.html" class="btn-outline">Programa Başla</a>
                     </div>
                 </div>
 
@@ -670,7 +670,7 @@
                                 Beslenme entegrasyonu
                             </li>
                         </ul>
-                        <a href="#" class="btn-outline">Programa Başla</a>
+                        <a href="rehberler/evde-egzersiz.html" class="btn-outline">Programa Başla</a>
                     </div>
                 </div>
             </div>
@@ -680,7 +680,7 @@
     <section class="cta-section">
         <h2>Size uygun egzersiz programını bulun</h2>
         <p>Kısa testimizi tamamlayın, hedeflerinize özel program önerisi alın.</p>
-        <a href="#" class="btn-white">Teste Başla →</a>
+        <a href="test.html" class="btn-white">Teste Başla →</a>
     </section>
 
     <footer class="footer">
@@ -701,15 +701,15 @@
                 </div>
                 <div class="footer-col">
                     <h4>Araçlar</h4>
-                    <a href="#">Bana Ne Uygun?</a>
-                    <a href="#">BMI Hesaplayıcı</a>
-                    <a href="#">Kalori Hesaplayıcı</a>
+                    <a href="test.html">Bana Ne Uygun?</a>
+                    <a href="araclar.html#bmi">BMI Hesaplayıcı</a>
+                    <a href="araclar.html#kalori">Kalori Hesaplayıcı</a>
                 </div>
                 <div class="footer-col">
                     <h4>Hakkımızda</h4>
-                    <a href="#">Ekibimiz</a>
-                    <a href="#">Bilimsel Yaklaşım</a>
-                    <a href="#">İletişim</a>
+                    <a href="hakkimizda.html">Ekibimiz</a>
+                    <a href="bilim.html">Bilimsel Yaklaşım</a>
+                    <a href="hakkimizda.html#iletisim">İletişim</a>
                 </div>
             </div>
             <div class="footer-bottom">
