Fix bilim.html test button

--- a/pages/bilim.html
+++ b/pages/bilim.html
@@ -927,7 +927,7 @@
     <section class="cta-section">
         <h2>Bilimsel yolculuğunuza başlayın</h2>
         <p>Kanıta dayalı, kişiselleştirilmiş sağlık önerilerimizi keşfedin.</p>
-        <a href="#" class="btn-white">Ücretsiz Teste Başla →</a>
+        <a href="test.html" class="btn-white">Ücretsiz Teste Başla →</a>
     </section>
 
     <footer class="footer">
